# vkteams-bot-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: cli.rs  lib.rs  main.rs
src/cli/: types.rs
