[package]
name = "vkteams-bot-cli"
version = "0.1.2"
edition = "2021"
authors = ["Andrei G. <k05h31@gmail.com>"]
description = "VK Teams Bot API CLI"
license = "MIT"
repository = "https://github.com/k05h31/vkteams-bot-cli/tree/master"
readme = "README.md"
keywords = ["vk", "teams", "bot", "cli"]
categories = ["asynchronous", "api-bindings", "web-programming::http-client"]
# build = "build.rs"

[dependencies]
clap = { version = "4.4", features = [
    "derive",
    'std',
    'color',
    'usage',
    'suggestions',
    'cargo',
] }
vkteams-bot = "0.2"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
log = "0.4"
dotenvy = "0.15"
pretty_env_logger = "0.5"
serde_json = "1.0"
serde_yaml = "0.9"
colored = "2.1"
serde = "1.0"
exitcode = "1.1"

[build-dependencies]
clap_complete = "4.4"
