[package]
name = "vkteams-bot-cli"
version = "0.5.2"
edition = "2021"
authors = ["Andrei G. <k05h31@gmail.com>"]
description = "VK Teams Bot API CLI"
license = "MIT"
repository = "https://github.com/bug-ops/vkteams-bot-cli/tree/master"
readme = "README.md"
keywords = ["vk", "teams", "bot", "cli"]
categories = ["asynchronous", "api-bindings", "web-programming::http-client"]

[dependencies]
clap = { version = "4.5", features = [
    "derive",
    'std',
    'color',
    'usage',
    'suggestions',
    'cargo',
] }
vkteams-bot = "0.5"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
log = "0.4"
dotenvy = "0.15"
pretty_env_logger = "0.5"
serde_json = "1"
serde_yaml = "0.9"
colored = "2"
serde = "1"
exitcode = "1"
